--- a/css/app.scss
+++ b/css/app.scss
@@ -18,21 +18,26 @@ $font-general: 'Georgia', serif;
 
 .App {
 	height: 100%;
-	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	color: #color-grey;
+	font-family: $font-general;
+	min-width: 600px;
 }
 
 .App__mainContainer {
 	flex: 1;
 	display: flex;
 	flex-direction: horizontal;
+	padding: 20px;
 }
 
-.App_bar {
-	padding-top: 10px;
-	text-align: center;
+.App__bar {
+	padding: 10px 20px;
+	background-color: #f0f0f0;
+	overflow: hidden;
+	font-size: 12px;
+	font-family: $font-heading;
 	a {
 		color: #aaa;
 		text-decoration: none;
@@ -40,6 +45,12 @@ $font-general: 'Georgia', serif;
 			text-decoration: underline;
 		}
 	}
+}
+.App__bar__identity {
+	float: left;
+}
+.App__bar__nav {
+	float: right;
 }
 
 /*
@@ -100,7 +111,6 @@ $font-general: 'Georgia', serif;
 		padding: 8px 12px;
 		margin-bottom: 10px;
 		outline: none;
-		font-family: $font-general;
 		font-style: italic;
 		font-size: 14px;
 		&:focus {
@@ -140,7 +150,6 @@ $font-general: 'Georgia', serif;
 		overflow: hidden;
 	}
 	.ThreadListItem__snippet {
-		font-family: $font-general;
 		font-size: 13px;
 		font-style: italic;
 		white-space: nowrap;
@@ -155,6 +164,110 @@ $font-general: 'Georgia', serif;
 
 .Conversation {
 	flex: 1;
-	background: #eee;
+	display: flex;
+	flex-direction: column;
+	// background: #eee;
+
+	// Header
+	.Conversation__header {
+		padding: 20px 10px 0;
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	.Conversation__threadTitle {
+		font-family: $font-heading;
+		font-size: 22px;
+		text-transform: uppercase;
+	}
+	.Conversation__options {
+		color: #fff;
+		background-color: $color-grey;
+		display: inline-block;
+		vertical-align: top;
+		padding: 2px 4px 3px 4px;
+		margin-top: 2px;
+		margin-left: 8px;
+		border-radius: 50%;
+		font-size: 10px;
+		font-weight: bold;
+	}
+	.Conversation__header__bottom {
+		margin-top: 6px;
+		padding-bottom: 20px;
+		border-bottom: 1px solid $color-grey;
+	}
+	.Conversation__threadDescription {
+		font-style: italic;
+		font-size: 13px;
+	}
+
+	// Chat
+	.Conversation__chat {
+		flex: 1;
+		overflow-y: scroll;
+		padding: 10px;
+	}
+	.Conversation__message {
+		margin-bottom: 20px;
+	}
+	.Conversation__message__author {
+		float: left;
+		text-align: right;
+		margin-right: 20px;
+		width: 20%;
+		font-family: $font-heading;
+		font-weight: bold;
+		text-transform: uppercase;
+		font-size: 13px;
+		padding-top: 1px;
+	}
+	.Conversation__message__date {
+		float: right;
+		text-align: right;
+		margin-left: 10px;
+		width: 20%;
+		font-size: 12px;
+		color: #bbb;
+	}
+	.Conversation__message__message {
+		font-size: 14px;
+	}
+
+	// Composer
+	.Conversation__composer {
+		display: flex;
+		flex-direction: row;
+		padding-top: 10px;
+	}
+	.Conversation__composerInputContainer {
+		flex: 1;
+		input {
+			width: 100%;
+			border: none;
+			background-color: $color-bg-lightgrey;
+			width: 100%;
+			padding: 8px 12px;
+			outline: none;
+			font-style: italic;
+			font-size: 14px;
+			&:focus {
+				font-style: normal;
+				&::-webkit-input-placeholder {
+					color: transparent;
+				}
+			}
+		}
+	}
+	.Conversation__composerControls {
+		padding-left: 10px;
+	}
+	.Conversation__buttonSend {
+		font-size: 12px;
+		font-family: $font-heading;
+		text-transform: uppercase;
+		background-color: $color-grey;
+		color: #fff;
+		padding: 11px 14px 7px;
+	}
 }
 
