Added login error display; request initial data after login; separated ui state into ui-prefixed state

--- a/css/_loginpage.scss
+++ b/css/_loginpage.scss
@@ -41,4 +41,14 @@
 		text-transform: uppercase;
 		color: #fff;
 	}
+
+	.LoginPage__error {
+		display: block;
+		min-height: 30px;
+		margin-top: 24px;
+		opacity: 0.5;
+		font-family: $font-general;
+		font-style: italic;
+		font-size: 14px;
+	}
 }
