--- a/css/_app.scss
+++ b/css/_app.scss
@@ -137,6 +137,7 @@
 		}
 		.ThreadListItem__snippet {
 			font-size: 13px;
+			line-height: 15px;
 			font-style: italic;
 			white-space: nowrap;
 			overflow: hidden;
@@ -250,7 +251,12 @@
 			text-transform: uppercase;
 			background-color: $color-grey;
 			color: #fff;
-			padding: 12px 14px 9px;
+			padding: 11px 14px 9px;
+			opacity: 0.5;
+			transition: opacity 150ms ease;
+		}
+		.Conversation__buttonSend-enabled {
+			opacity: 1;
 		}
 	}
 }
